# beatbridge

./: CHANGELOG.md  Cargo.toml  README.md  beatbridge.example.toml  beatbridge.toml
.github/workflows/: ci.yml  security-audit.yml
src/: bridge.rs  config.rs  main.rs  status.rs
